# linxVirt

linx-spice-gtk/: .version  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  THANKS  ca-cert.pem  ca-key.pem  config.h  config.h.in  config.status  configure  keygenerate.sh  libtool  server-cert.pem  server-key.csr  server-key.pem  spice-client-glib-2.0.pc  spice-client-gtk-2.0.pc  spice-client-gtk-3.0.pc  spice-controller.pc  tags
linx-spice-gtk/.anjuta/session/: anjuta.session  dock-layout.xml
linx-spice-gtk/data/: Makefile  Makefile.in  spicy.nsis
linx-spice-gtk/doc/: Makefile  Makefile.in
linx-spice-gtk/doc/reference/: Makefile  Makefile.in
linx-spice-gtk/gtk/: Makefile  Makefile.in  bio-gio.lo  channel-base.lo  channel-cursor.lo  channel-display-mjpeg.lo  channel-display.lo  channel-inputs.lo  channel-main.c  channel-main.h  channel-main.lo  channel-playback.lo  channel-port.lo  channel-record.lo  channel-smartcard.lo  channel-usbredir.lo  channel-webdav.lo  client_sw_canvas.lo  continuation.lo  coroutine_ucontext.lo  decode-glz.c  decode-glz.lo  decode-jpeg.lo  decode-zlib.lo  desktop-integration.lo  gio-coroutine.lo  glib-compat.lo  libspice-client-glib-2.0.la  libspice-client-gtk-2.0.la  libspice-client-gtk-3.0.la  map-file  smartcard-manager.lo  spice-audio.lo  spice-channel.c  spice-channel.lo  spice-client.lo  spice-glib-enums.lo  spice-grabsequence.lo  spice-gtk-session.lo  spice-marshal.c  (+26 more)
linx-spice-gtk/gtk/.deps/: bio-gio.Plo  channel-base.Plo  channel-cursor.Plo  channel-display-mjpeg.Plo  channel-display.Plo  channel-inputs.Plo  channel-main.Plo  channel-playback.Plo  channel-port.Plo  channel-record.Plo  channel-smartcard.Plo  channel-usbredir.Plo  channel-webdav.Plo  client_sw_canvas.Plo  continuation.Plo  coroutine_ucontext.Plo  decode-glz.Plo  decode-jpeg.Plo  decode-zlib.Plo  desktop-integration.Plo  gio-coroutine.Plo  glib-compat.Plo  smartcard-manager.Plo  spice-audio.Plo  spice-channel.Plo  spice-client.Plo  spice-cmdline.Po  spice-glib-enums.Plo  spice-grabsequence.Plo  spice-gtk-session.Plo  spice-marshal.Plo  spice-option.Plo  spice-pulse.Plo  spice-session.Plo  spice-uri.Plo  spice-util.Plo  spice-widget-cairo.Plo  spice-widget-enums.Plo  spice-widget.Plo  spicy-cJSON.Po  (+10 more)
linx-spice-gtk/gtk/.libs/: libspice-client-glib-2.0.la  libspice-client-glib-2.0.lai  libspice-client-gtk-2.0.la  libspice-client-gtk-2.0.lai  libspice-client-gtk-2.0.so.4.0.0  lt-spicy  spicy  spicy-screenshot  spicy-stats
linx-spice-gtk/gtk/controller/: Makefile  Makefile.in  controller.c  controller.lo  foreign-menu.c  foreign-menu.lo  libspice-controller.la  menu.c  menu.lo  spice-controller-dump  spice-controller-listener.lo  spice-controller.h  spice-foreign-menu-listener.lo  test-controller  util.c
linx-spice-gtk/gtk/controller/.deps/: controller.Plo  dump.Po  foreign-menu.Plo  menu.Plo  spice-controller-listener.Plo  spice-foreign-menu-listener.Plo  test.Po  util.Plo
linx-spice-gtk/gtk/controller/.libs/: libspice-controller.la  libspice-controller.lai  libspice-controller.so.0.0.0  spice-controller-dump  test-controller
linx-spice-gtk/man/: Makefile  Makefile.in  spice-client.1
linx-spice-gtk/po/: Makefile  Makefile.in  POTFILES
linx-spice-gtk/spice-common/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
linx-spice-gtk/spice-common/common/: Makefile  Makefile.in  libspice-common.la  ssl_verify.c
linx-spice-gtk/spice-common/common/.deps/: backtrace.Plo  canvas_utils.Plo  generated_client_demarshallers.Plo  generated_client_demarshallers1.Plo  generated_client_marshallers.Plo  generated_client_marshallers1.Plo  libspice_common_server_la-generated_server_demarshallers.Plo  libspice_common_server_la-generated_server_marshallers.Plo  lines.Plo  log.Plo  lz.Plo  marshaller.Plo  mem.Plo  pixman_utils.Plo  quic.Plo  region.Plo  rop3.Plo  snd_codec.Plo  ssl_verify.Plo
linx-spice-gtk/spice-common/python_modules/: Makefile  Makefile.in
linx-spice-gtk/spice-common/spice-protocol/: Makefile  config.h  config.status  configure  spice-protocol.pc
linx-spice-gtk/spice-common/spice-protocol/spice/: Makefile  vd_agent.h
linx-spice-gtk/tests/: Makefile  Makefile.in
linx-spice-gtk/vapi/: Makefile  Makefile.in
py-selenium/config/: config.ini
py-selenium/src/browser/: browser.py
py-selenium/src/log/: logger.py
py-selenium/src/pages/: base.py  disk.py  host.py  login.py  menu.py  network.py  storage.py  template.py  user.py  vm.py
py-selenium/src/run/: dsik.py  host.py  start.py  units.py  user.py  vm.py
py-selenium/src/tests/: disk.py  host.py  login.py  network.py  storage.py  template.py  test_disk.py  test_net.py  test_storage.py  test_temp.py  test_vm.py  tets_host.py  tets_user.py  user.py  vm.py
py-selenium/src/usecases/: disk.py  host.py  login.py  network.py  storage.py  template.py  user.py  vm.py
