cmake_minimum_required(VERSION 3.9)
project(spice_gtk_0_28)

set(CMAKE_CXX_STANDARD 11)


include_directories(/usr/include/glib-2.0)
target_link_libraries(/lib/x86_64-linux-gnu)

add_executable(spice_gtk_0_28
        gtk/controller/controller.c
        gtk/controller/custom.h
        gtk/controller/dump.c
        gtk/controller/foreign-menu.c
        gtk/controller/menu.c
        gtk/controller/namedpipe.c
        gtk/controller/namedpipe.h
        gtk/controller/namedpipeconnection.c
        gtk/controller/namedpipeconnection.h
        gtk/controller/namedpipelistener.c
        gtk/controller/namedpipelistener.h
        gtk/controller/spice-controller-listener.c
        gtk/controller/spice-controller-listener.h
        gtk/controller/spice-controller.h
        gtk/controller/spice-foreign-menu-listener.c
        gtk/controller/spice-foreign-menu-listener.h
        gtk/controller/test.c
        gtk/controller/util.c
        gtk/controller/win32-util.c
        gtk/controller/win32-util.h
        gtk/bio-gio.c
        gtk/bio-gio.h
        gtk/channel-base.c
        gtk/channel-cursor.c
        gtk/channel-cursor.h
        gtk/channel-display-mjpeg.c
        gtk/channel-display-priv.h
        gtk/channel-display.c
        gtk/channel-display.h
        gtk/channel-inputs.c
        gtk/channel-inputs.h
        gtk/channel-main.c
        gtk/channel-main.h
        gtk/channel-playback-priv.h
        gtk/channel-playback.c
        gtk/channel-playback.h
        gtk/channel-port.c
        gtk/channel-port.h
        gtk/channel-record.c
        gtk/channel-record.h
        gtk/channel-smartcard.c
        gtk/channel-smartcard.h
        gtk/channel-usbredir-priv.h
        gtk/channel-usbredir.c
        gtk/channel-usbredir.h
        gtk/channel-webdav.c
        gtk/channel-webdav.h
        gtk/client_sw_canvas.c
        gtk/client_sw_canvas.h
        gtk/continuation.c
        gtk/continuation.h
        gtk/coroutine.h
        gtk/coroutine_gthread.c
        gtk/coroutine_ucontext.c
        gtk/coroutine_winfibers.c
        gtk/decode-glz-tmpl.c
        gtk/decode-glz.c
        gtk/decode-jpeg.c
        gtk/decode-zlib.c
        gtk/decode.h
        gtk/desktop-integration.c
        gtk/desktop-integration.h
        gtk/gio-coroutine.c
        gtk/gio-coroutine.h
        gtk/giopipe.c
        gtk/giopipe.h
        gtk/glib-compat.c
        gtk/glib-compat.h
        gtk/gtk-compat.h
        gtk/smartcard-manager-priv.h
        gtk/smartcard-manager.c
        gtk/smartcard-manager.h
        gtk/spice-audio-priv.h
        gtk/spice-audio.c
        gtk/spice-audio.h
        gtk/spice-channel-cache.h
        gtk/spice-channel-enums.h
        gtk/spice-channel-priv.h
        gtk/spice-channel.c
        gtk/spice-channel.h
        gtk/spice-client-glib-usb-acl-helper.c
        gtk/spice-client-gtk-module.c
        gtk/spice-client.c
        gtk/spice-client.h
        gtk/spice-cmdline.c
        gtk/spice-cmdline.h
        gtk/spice-common.h
        gtk/spice-glib-enums.c
        gtk/spice-glib-enums.h
        gtk/spice-grabsequence.c
        gtk/spice-grabsequence.h
        gtk/spice-gstaudio.c
        gtk/spice-gstaudio.h
        gtk/spice-gtk-session-priv.h
        gtk/spice-gtk-session.c
        gtk/spice-gtk-session.h
        gtk/spice-marshal.c
        gtk/spice-marshal.h
        gtk/spice-option.c
        gtk/spice-option.h
        gtk/spice-pulse.c
        gtk/spice-pulse.h
        gtk/spice-session-priv.h
        gtk/spice-session.c
        gtk/spice-session.h
        gtk/spice-types.h
        gtk/spice-uri-priv.h
        gtk/spice-uri.c
        gtk/spice-uri.h
        gtk/spice-util-priv.h
        gtk/spice-util.c
        gtk/spice-util.h
        gtk/spice-version.h
        gtk/spice-widget-cairo.c
        gtk/spice-widget-enums.c
        gtk/spice-widget-enums.h
        gtk/spice-widget-priv.h
        gtk/spice-widget-x11.c
        gtk/spice-widget.c
        gtk/spice-widget.h
        gtk/spicy-screenshot.c
        gtk/spicy-stats.c
        gtk/spicy.c
        gtk/usb-acl-helper.c
        gtk/usb-acl-helper.h
        gtk/usb-device-manager-priv.h
        gtk/usb-device-manager.c
        gtk/usb-device-manager.h
        gtk/usb-device-widget.c
        gtk/usb-device-widget.h
        gtk/usbutil.c
        gtk/usbutil.h
        gtk/vmcstream.c
        gtk/vmcstream.h
        gtk/vncdisplaykeymap.c
        gtk/vncdisplaykeymap.h
        gtk/vncdisplaykeymap_osx2xtkbd.c
        gtk/vncdisplaykeymap_win322xtkbd.c
        gtk/vncdisplaykeymap_x112xtkbd.c
        gtk/vncdisplaykeymap_xorgevdev2xtkbd.c
        gtk/vncdisplaykeymap_xorgkbd2xtkbd.c
        gtk/vncdisplaykeymap_xorgxquartz2xtkbd.c
        gtk/vncdisplaykeymap_xorgxwin2xtkbd.c
        gtk/win-usb-clerk.h
        gtk/win-usb-dev.c
        gtk/win-usb-dev.h
        gtk/win-usb-driver-install.c
        gtk/win-usb-driver-install.h
        gtk/wocky-http-proxy.c
        gtk/wocky-http-proxy.h
        spice-common/common/backtrace.c
        spice-common/common/backtrace.h
        spice-common/common/bitops.h
        spice-common/common/canvas_base.c
        spice-common/common/canvas_base.h
        spice-common/common/canvas_utils.c
        spice-common/common/canvas_utils.h
        spice-common/common/client_demarshallers.h
        spice-common/common/client_marshallers.h
        spice-common/common/draw.h
        spice-common/common/gdi_canvas.c
        spice-common/common/gdi_canvas.h
        spice-common/common/generated_client_demarshallers.c
        spice-common/common/generated_client_demarshallers1.c
        spice-common/common/generated_client_marshallers.c
        spice-common/common/generated_client_marshallers1.c
        spice-common/common/generated_server_demarshallers.c
        spice-common/common/generated_server_marshallers.c
        spice-common/common/generated_server_marshallers.h
        spice-common/common/gl_canvas.c
        spice-common/common/gl_canvas.h
        spice-common/common/gl_utils.h
        spice-common/common/glc.c
        spice-common/common/glc.h
        spice-common/common/lines.c
        spice-common/common/lines.h
        spice-common/common/log.c
        spice-common/common/log.h
        spice-common/common/lz.c
        spice-common/common/lz.h
        spice-common/common/lz_common.h
        spice-common/common/lz_compress_tmpl.c
        spice-common/common/lz_config.h
        spice-common/common/lz_decompress_tmpl.c
        spice-common/common/macros.h
        spice-common/common/marshaller.c
        spice-common/common/marshaller.h
        spice-common/common/mem.c
        spice-common/common/mem.h
        spice-common/common/messages.h
        spice-common/common/ogl_ctx.c
        spice-common/common/ogl_ctx.h
        spice-common/common/pixman_utils.c
        spice-common/common/pixman_utils.h
        spice-common/common/quic.c
        spice-common/common/quic.h
        spice-common/common/quic_config.h
        spice-common/common/quic_family_tmpl.c
        spice-common/common/quic_rgb_tmpl.c
        spice-common/common/quic_tmpl.c
        spice-common/common/rect.h
        spice-common/common/region.c
        spice-common/common/region.h
        spice-common/common/ring.h
        spice-common/common/rop3.c
        spice-common/common/rop3.h
        spice-common/common/snd_codec.c
        spice-common/common/snd_codec.h
        spice-common/common/spice_common.h
        spice-common/common/ssl_verify.c
        spice-common/common/ssl_verify.h
        spice-common/common/sw_canvas.c
        spice-common/common/sw_canvas.h
        spice-common/common/verify.h
        spice-common/spice-protocol/spice/barrier.h
        spice-common/spice-protocol/spice/controller_prot.h
        spice-common/spice-protocol/spice/end-packed.h
        spice-common/spice-protocol/spice/enums.h
        spice-common/spice-protocol/spice/error_codes.h
        spice-common/spice-protocol/spice/foreign_menu_prot.h
        spice-common/spice-protocol/spice/ipc_ring.h
        spice-common/spice-protocol/spice/macros.h
        spice-common/spice-protocol/spice/protocol.h
        spice-common/spice-protocol/spice/qxl_dev.h
        spice-common/spice-protocol/spice/qxl_windows.h
        spice-common/spice-protocol/spice/start-packed.h
        spice-common/spice-protocol/spice/stats.h
        spice-common/spice-protocol/spice/types.h
        spice-common/spice-protocol/spice/vd_agent.h
        spice-common/spice-protocol/spice/vdi_dev.h
        spice-common/spice-protocol/config.h
        spice-common/config.h
        tests/coroutine.c
        tests/pipe.c
        tests/session.c
        tests/util.c
        config.h)

